test bluetooth out on real device, crashes on emulator (not compatible)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="dev_type">Device Type</string>
+    <string name="value_read">value</string>
 </resources>
